# epb-ecaas-pcdb

./: .gitignore  Cargo.toml  README.md  commit-template.txt  justfile
resolve-products/: Cargo.toml
resolve-products/src/: combined_schema.json  errors.rs  in_use_factors.rs  lib.rs  main.rs  products.json  products.rs  transforms.rs
resolve-products/src/transform/: air_powered_shower.rs  heat_pump_hw_only.rs  mod.rs  smart_hot_water_tank.rs  transform.rs  transform_heat_source_wet.rs  transform_json.rs  wwhrs.rs
resolve-products/src/transform/fixtures/: air_powered_shower_pcdb.json  heat_batteries_pcdb.json  heat_network_pcdb.json  heat_network_transformed.json  heat_pump_additional_fields.json  heat_pump_pcdb.json  hiu_pcdb.json  hp_hw_only_pcdb.json  in_use_factors.json  mechanical_ventilation_pcdb.json  request_with_energy_supplies.json  smart_hw_tank_transformed.json  space_heating_pcdb.json  ufh_transformed.json  wwhrs_pcdb.json
resolve-products/src/transform/heat_source_wet/: boiler.rs  heat_battery_dry_core.rs  heat_battery_pcm.rs  heat_network.rs  heat_pump.rs  hiu.rs  mod.rs
resolve-products/src/transform/hot_water_source/: mod.rs  smart_hot_water_tank.rs
resolve-products/src/transform/mechanical_ventilation/: centralised_mev.rs  centralised_mvhr.rs  decentralised_mev.rs  mod.rs
resolve-products/src/transform/space_heat_system/: elec_storage_heater.rs  fancoil.rs  mod.rs  radiator.rs  underfloor_heating.rs
resolve-products/src/transform/space_heating/: elec_storage_heater.rs  fancoil.rs  mod.rs  radiator.rs  underfloor_heating.rs
resolve-products/src/transform/transform_heat_source_wet/: mod.rs  transform_boiler.rs  (+1 more)
resolve-products/test/: air_powered_shower_transformed.json  demo_heat_pump_product_ref.json  fancoil_transformed.json  heat_battery_input_transformed.json  heat_network_pcdb.json  hiu_transformed.json  hot_water_source_input.json  hot_water_source_pcdb.json  hp_hw_only_pcdb.json  hp_hw_only_transformed.json  in_use_factors.json  mechanical_ventilation_input_transformed.json  radiator_transformed.json  referenced_products.json  smart_hw_tank_pcdb.json  smart_hw_tank_transformed.json  space_heating_input.json  space_heating_pcdb.json  target_schema.json  test_boiler_input_transformed.json  test_boilers_pcdb.json  test_dry_core_heat_batteries_pcdb.json  test_dry_core_heat_battery_input_transformed.json  test_esh_input_transformed.json  test_esh_pcdb.json  test_heat_batteries_pcdb.json  test_heat_battery_input_transformed.json  test_heat_pump_additional_fields.json  test_heat_pump_input.json  test_heat_pump_input_transformed.json  test_heat_pump_pcdb.json  test_mechanical_ventilation_input_transformed.json  test_mechanical_ventilation_pcdb.json  test_pcm_heat_batteries_pcdb.json  test_pcm_heat_battery_input_transformed.json  test_radiator_pcdb.json  wet_distribution_transformed.json  wwhrs_transformed.json
resolve-products/tests/: demo_fhs.json  example_input.json  hp_only_input.json  hp_only_input_transformed.json  input_with_product_refs.json  input_with_unknown_product_refs.json  integration-test.rs  pcdb_products.json
resolve-products/tests/common/: mod.rs
resolve-products/tests/fixtures/: input_transformed.json  input_with_product_refs.json  pcdb_products.json  target_schema.json
schemagen/: Cargo.toml
schemagen/src/: main.rs  schema_patches.json
(+3 files in other folders)
