[package]
name = "resolve-products"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.10.0"
itertools = "0.14.0"
jsonpath-rust = "1.0.3"
jsonschema = "0.30.0"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.142"
serde_valid = "1.0.5"
thiserror = "2.0.12"
smartstring = { version = "1.0.1", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"