[package]
name = "resolve-products"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"], optional = true }
indexmap = "2.10.0"
itertools = "0.14.0"
jsonpath-rust = "1.0.4"
jsonschema = "0.32.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.142"
serde_valid = "1.0.5"
thiserror = "2.0.16"
smartstring = { version = "1.0.1", features = ["serde"] }

[features]
default = []
cli = ["dep:clap"]

[dev-dependencies]
rstest = "0.26.1"

[[bin]]
name = "resolve-products"
required-features = ["cli"]
