[package]
name = "resolve-products"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
aws-config = { version = "1.8.14", features = ["behavior-version-latest"], optional = true }
aws-sdk-dynamodb = "1.100.0"
clap = { version = "4.6.0", features = ["derive"], optional = true }
itertools = "0.14.0"
jsonpath-rust = "1.0.4"
jsonschema = { version = "0.46.0", features = ["resolve-async"] }
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-enum-str = "0.5.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.143"
serde_valid = "2.0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.18"
smartstring = { version = "1.0.1", features = ["serde"] }
serde_repr = "0.1.20"

[features]
default = []
cli = ["dep:clap"]

[dev-dependencies]
rstest = "0.26.1"

[[bin]]
name = "resolve-products"
required-features = ["cli", "aws-config"]
