[package]
name = "schemagen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
json-patch = "4.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
tokio = { version = "1", features = ["full"]}