[package]
name = "schemagen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
json-patch = "4.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }